<resources>
    <string name="app_name">The Hill Reloaded</string>
    <string name="bottone_continua_no_accesso">Continua senza accedere</string>
    <string name="bottone_accesso_google">Accedi con Google</string>
    <string name="bottone_inizia_partita">Inizia</string>
    <string name="bottone_continua_partita">Continua</string>
    <string name="bottone_online_game">Multigiocatore</string>
    <string name="bottone_impostazioni_menu">Impostazioni</string>
    <string name="modalita_classica">Classica</string>
    <string name="modalita_reloaded">Reloaded</string>
    <string name="bottone_impostazioni_audio">Sound</string>
    <string name="bottone_riconoscimenti">Credits</string>
    <string name="bottone_uscita">Log-out</string>
    <string name="torna_indietro">Torna al menu</string>
    <string name="mod_facile">Facile</string>
    <string name="mod_normale">Normale</string>
    <string name="mod_difficile">Difficile</string>
    <string name="classic_description">Modalità Classica, 6 centrali + 1 inceneritore</string>
    <string name="reloaded_description">Modalità Reloaded, 7 centrali + 1 incereitore e poweup</string>
    <string name="accesso_senza_login">Effettuando l\'accesso come ospite le funzioni dell\'applicazione saranno limitate. Sei sicuro di voler continuare come ospite?</string>
    <string name="continua_ospite">Continua come ospite</string>
    <string name="back_to_login">Ritorna al login</string>
    <string name="switch_volume_musica">Musica</string>
    <string name="switch_volume_suoni">Suoni</string>
    <string name="bottone_punteggi">Punteggi</string>
    <string name="host_match">Ospita una partita</string>
    <string name="join_match">Unisciti ad una partita</string>
    <string name="bottone_torna_a_gioco">Torna al gioco</string>
    <string name="bottone_salva_partita">Salva partita</string>
    <string name="bottne_torna_a_menu">Torna al menù principale</string>
    <string name="titolo_lista_host">Lista host</string>
    <string name="titolo_risultato_partita">Risultato partita</string>
    <string name="connection_listening">In attesa di connessioni</string>
    <string name="connection_connecting">Connessione</string>
    <string name="connection_connected">Connesso</string>
    <string name="connection_failed">Connessione non riuscita</string>
    <string name="messaggio_gps">Il GPS è disattivato. Vuoi attivarlo?</string>
    <string name="vai_impostazioni">Vai alle impostazioni</string>
    <string name="annulla">Annulla</string>
    <string name="unita_riciclo_plastica">Plastica</string>
    <string name="unita_riciclo_vetro">Vetro</string>
    <string name="unita_riciclo_carta">Carta</string>
    <string name="unita_riciclo_alluminio">Alluminio</string>
    <string name="unita_riciclo_ewaste">E-waste</string>
    <string name="unita_riciclo_acciaio">Acciaio</string>
    <string name="unita_riciclo_organico">Organico</string>
    <string name="email_auth" translatable="false">TextView</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="sunny_non_sufficienti">Non hai abbastanza Sunny Points</string>
    <string name="nessun_rifiuto">Nessun rifiuto da incenerire</string>
    <string name="unit_non_sufficienti">Non hai abbastanza Unit Points</string>
    <string name="conferma_uscita_partita">Sei sicuro di voler uscire? I progressi non salvati andranno persi.</string>
    <string name="bottone_conferma">Ok</string>
    <string name="bottone_torna_indietro">Torna indietro</string>
    <string name="quest1">Costruisci tutte \nle unità di riciclo</string>
    <string name="quest2">Guadagna 100 \nSunny Points</string>
    <string name="quest3">Produci 3 oggetti di \nlivello massimo \nda Ewaste</string>
    <string name="quest4">Ricicla 50 rifiuti \ndi organico</string>
    <string name="quest5">Sblocca l\'unità di riciclo \ndi Vetro di livello 3</string>
    <string name="quest6">Guadagna 20 Unit \nPoints nell\'unità \ndella carta</string>
    <string name="text_usura">Usura: %1$d / %2$d</string>
    <string name="text_unit_points">Unit Points: %1$d</string>
    <string name="text_status">Upgrade: %1$d</string>
    <string name="text_costo_sbloccabili">Costo: %1$d</string>
    <string name="text_ricavo_sbloccabili">Ricavo: %1$d</string>
    <string name="riprova">Riprova</string>
    <string name="power_up_centrale_sbagliata">Unità sbagliata</string>
    <string name="power_up_gia_attivo">C\'è già un power up attivo su questa unità</string>
    <string name="unit_points_raddoppiati">unit points guadagnati raddoppiati</string>
    <string name="usura_ridotta">Usura ridotta</string>
    <string name="processamento_ridotto">Tempo di processamento ridotto</string>
    <string name="unit_points_ridotti">Unit points guadagnati x0</string>
    <string name="usura_raddoppiata">Usura aumentata</string>
    <string name="processamento_aumentato">Tempo di processamento aumentato</string>
    <string name="al_perso_upgrade">La centrale dell\'alluminio ha perso un upgrade</string>
    <string name="or_perso_upgrade">La centrale dell\'organico ha perso un upgrade</string>
    <string name="ew_perso_upgrade">La centrale dell\'e-waste ha perso un upgrade</string>
    <string name="ve_perso_upgrade">La centrale del vetro ha perso un upgrade</string>
    <string name="ca_perso_upgrade">La centrale della carta ha perso un upgrade</string>
    <string name="pl_perso_upgrade">La centrale della plastica ha perso un upgrade</string>
    <string name="st_perso_upgrade">La centrale dell\'acciaio ha perso un upgrade</string>
    <string name="missione_completata">Missione completata</string>
    <string name="oggetto_sbloccato">Oggetto sbloccato!</string>
    <string name="azione_non_disponibile_upgrade">Upgrade non disponibile</string>
    <string name="giocatore_disconnesso">Giocatore disconnesso</string>
    <string name="tuo_punteggio">Tuo punteggio</string>
    <string name="suo_punteggio">Punteggio avversario</string>
    <string name="hai_vinto">Hai vinto</string>
    <string name="hai_perso">Hai perso</string>
    <string name="pareggio">Pareggio</string>
    <string name="processo_punteggi">Attendi mentre vengono elaborati i risultati \n o che il tuo avversaio termini la partita.</string>
    <string name="str_acciaio1">É possibile produrre chiodi da metalli riciclati</string>
    <string name="str_acciaio2">É possibile produrre utensili da cucina (pentole, moka) da metalli riciclati</string>
    <string name="str_acciaio3">É possibile produrre attrezzi da palestra (pesi, manubri) da metalli riciclati</string>
    <string name="str_acciaio4">É possibile produrre materiale da costruzione (travi in acciaio) da metalli riciclati</string>
    <string name="str_alluminio1">É possibile produrre nuove lattine da alluminio riciclato</string>
    <string name="str_alluminio2">É possibile produrre oggetti di uso quotidiano (tazze da viaggio, bottiglie) da alluminio riciclato</string>
    <string name="str_alluminio3">É possibile produrre oggetti di uso domestico (scale, sedie) da alluminio riciclato</string>
    <string name="str_alluminio4">É possibile produrre componenti per automobili (cerchioni, blocco motore) da alluminio riciclato</string>
    <string name="str_carta1">É possibile produrre fogli e giornali dalla carta riciclata</string>
    <string name="str_carta2">É possibile produrre quaderni e libri dalla carta riciclata</string>
    <string name="str_carta3">É possibile produrre sacchetti e bustine di carta dalla carta riciclata</string>
    <string name="str_carta4">É possibile produrre scatole di cartone dalla carta riciclata</string>
    <string name="str_ewaste1">É possibile recuperare rame dai rifiuti elettronici</string>
    <string name="str_ewaste2">É possibile recuperare alluminio dai rifiuti elettronici</string>
    <string name="str_ewaste3">É possibile recuperare argento dai rifiuti elettronici</string>
    <string name="str_ewaste4">É possibile recuperare oro dai rifiuti elettronici</string>
    <string name="str_plastica1">É possibile produrre bicchieri dalla plastica riciclata</string>
    <string name="str_plastica2">É possibile produrre bottiglie e contenitori dalla plastica riciclata</string>
    <string name="str_plastica3">É possibile produrre scocche di apparecchi elettronici dalla plastica riciclata</string>
    <string name="str_plastica4">É possibile produrre oggetti di uso comune (sedie, scatole) dalla plastica riciclata</string>
    <string name="str_umido">É possibile produrre fertilizzante di rifiuti organici riciclata</string>
    <string name="str_vetro1">É possibile produrre barattoli e contenitori in vetro dal vetro riciclato</string>
    <string name="str_vetro2">É possibile produrre nuove bottiglie dal vetro riciclato</string>
    <string name="str_vetro3">É possibile produrre vasi decorativi in vetro dal vetro riciclato</string>
    <string name="str_vetro4">É possibile produrre pannelli in vetro dal vetro riciclato</string>
    <string name="utente" translatable="false">Utente</string>
    <string name="score" translatable="false">Score</string>
    <string name="gametime" translatable="false">GameTime</string>
    <string name="user" translatable="false">User</string>
    <string name="signin" translatable="false">SignIn</string>
    <string name="form_nome">Nome</string>
    <string name="form_email">Email</string>
    <string name="form_password">Password</string>
    <string name="form_conferma_password">Conferma password</string>
    <string name="reg_esistente">Già registrato?</string>
    <string name="form_login" translatable="false">Login</string>
    <string name="reg_non_esistente">Non hai ancora un account?</string>
    <string name="form_registra">Registrati</string>
    <string name="bottone_accesso">Accedi</string>
    <string name="txt_riconoscimenti">Basato su: The (H)ill \n\nSviluppato per l\'esame di \nSviluppo di Mobile Software \nAnno 2021/22 \n\nAlessandro Rossi - Mat.: 709241 \nAndrea Tarulli - Mat.: 704224 \nSabrina Pinto - Mat.: 707173 \nFederica Pellegrino - Mat.: 656874</string>
    <string name="bottone_indietro">Torna indietro</string>
    <string name="messaggio_permessi">Per avviare una partita multiplayer autorizzare il dispositivo ad accedere al bluetooth e alla posizione</string>
    <string name="tut_glass_build">Seleziona la centrale del vetro per acquistarla</string>
    <string name="tut_glass_open">Seleziona la centrale del vetro per aprire il suo menu</string>
    <string name="tut_glass_up">Aggiorna l\'unità per sbloccare \nun nuovo slot di processamento \ne nuovi oggetti riciclati</string>
    <string name="benvenuto_tut">Benvenuto in the hill reloaded</string>
    <string name="dovrai_tut">Il tuo obiettivo sarà riciclare i rifiuti che cadono \nprima che raggiungano la linea rossa</string>
    <string name="proviamo_tut">Ora prova a costruire la prima unità</string>
    <string name="apri_menu_tut">Clicca qui per aprire \nil menu di gestione delle unità</string>
    <string name="trascina_tut">Ora prova a riciclare.  \nTracina il vetro sull\'unità appena costruita</string>
    <string name="gestisci_tut">Quando la centrale avrà terminato \ndi processare l\'ogetto \navrai abbastanza unit points \nper eseguire un upgrade. \nApri il menu delle centrali per farlo.</string>
    <string name="sunny_tut">Gli oggetti riciclati dalle unità \nti permetteranno di ottenere sunny point \nche potrai spendere per acquistare nuove unità \no usare l\'inceneritore.</string>
    <string name="inc_tut">L\'inceneritore è un\'unità speciale \nche può processare qualsiasi tipo di rifiuto \nal costo di 2 sunny points. \nSpendendo 3 sunny points \npotrai attivare il suo potere speciale: \nscuotendo il telefono potrai \nincenerire tutti i rifiuti \nalla base della collina.</string>
</resources>