<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/giallo_scuro_background"
    tools:context=".UserMenuActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="731dp"
        android:layout_height="372dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_main" />

    <android.widget.Button
        android:id="@+id/bottone_inizia_utente"
        style="@style/StileBottoni"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginTop="68dp"
        android:text="@string/bottone_inizia_partita"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.844"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/bottoni_personalizzati"/>

    <android.widget.Button
        android:id="@+id/bottone_continua_utente"
        style="@style/StileBottoni"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bottoni_personalizzati"
        android:onClick="onClickGioco"
        android:text="@string/bottone_continua_partita"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.844"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottone_inizia_utente" />

    <android.widget.Button
        android:id="@+id/bottone_online_utente"
        style="@style/StileBottoni"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bottoni_personalizzati"
        android:onClick="onClickMultiplayer"
        android:text="@string/bottone_online_game"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.844"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottone_continua_utente" />

    <ImageButton
        android:id="@+id/bottone_impostazioni"
        android:layout_width="63dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="68dp"
        android:background="@drawable/bottoni_personalizzati"
        android:contentDescription="@string/bottone_impostazioni_menu"
        android:onClick="onClickImpostazioni"
        android:padding="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottone_online_utente"
        app:srcCompat="@drawable/ic_impostazioni" />

    <ImageButton
        android:id="@+id/bottone_punteggi"
        android:layout_width="63dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/bottoni_personalizzati"
        android:padding="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/bottone_impostazioni"
        app:layout_constraintTop_toBottomOf="@+id/bottone_online_utente"
        app:srcCompat="@drawable/ic_punteggi"
        android:contentDescription="@string/bottone_punteggi"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="210dp"
        android:layout_height="115dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/titolo_main" />

    <FrameLayout
        android:id="@+id/fragment_modalita"
        android:layout_width="641dp"
        android:layout_height="361dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>