<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@color/giallo_scuro_background">

    <ImageView
        android:id="@+id/bg_menu_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_main" />

    <ImageView
        android:id="@+id/titolo_menu_accesso"
        android:layout_width="210dp"
        android:layout_height="115dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/titolo_main" />

    <android.widget.Button
        android:id="@+id/bottone_impostazioni_volume"
        style="@style/StileBottoni"
        android:layout_width="135dp"
        android:layout_height="55dp"
        android:layout_marginTop="108dp"
        android:text="@string/bottone_impostazioni_audio"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.800"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/bottoni_personalizzati"/>

    <android.widget.Button
        android:id="@+id/bottone_riconoscimenti"
        style="@style/StileBottoni"
        android:layout_width="135dp"
        android:layout_height="55dp"
        android:layout_marginTop="37dp"
        android:text="@string/bottone_riconoscimenti"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottone_impostazioni_volume"
        android:background="@drawable/bottoni_personalizzati"/>

    <android.widget.Button
        android:id="@+id/bottone_esci"
        style="@style/StileBottoni"
        android:layout_width="135dp"
        android:layout_height="55dp"
        android:layout_marginTop="29dp"
        android:onClick="onClickEsci"
        android:text="@string/bottone_uscita"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottone_riconoscimenti"
        android:background="@drawable/bottoni_personalizzati"/>

    <ImageButton
        android:id="@+id/bottone_torna_indietro"
        android:layout_width="125dp"
        android:layout_height="75dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="24dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/torna_indietro"
        android:contextClickable="false"
        android:onClick="OnClickTornaIndietro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_freccia_indietro" />

    <FrameLayout
        android:id="@+id/fragment_impostazioni_volume"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>